<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="pageTitle"
            type="String" />

        <variable
            name="isAllowed"
            type="Boolean" />

        <variable
            name="queryTextListener"
            type="androidx.appcompat.widget.SearchView.OnQueryTextListener" />

        <variable
            name="baseViewModel"
            type="com.dxb.truckmonitor.presentation.base.BaseViewModel" />

    </data>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:paddingEnd="0dp"
        android:paddingStart="0dp"
        app:elevation="8dp"
        android:animateLayoutChanges="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/action_bar_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            android:animateLayoutChanges="true"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupTheme">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/heading_main"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="@color/md_white_1000"
                android:onClick="@{() -> baseViewModel.postMessage(@string/app_name)}"
                android:text="@{pageTitle}" />

            <ImageView
                android:id="@+id/action_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:scaleY="1.3"
                android:clickable="@{isAllowed}"
                app:tint="@color/md_white_1000"
                android:onClick="@{() -> baseViewModel.onRightAction()}"
                android:layout_gravity="center_vertical|end"
                android:src="@drawable/icon_sort"
                android:contentDescription="@string/sort_icon" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="20dp"
            app:queryHint="Search"
            app:iconifiedByDefault="false"
            app:onQueryTextListener="@{isAllowed ? queryTextListener : null}"
            android:background="@drawable/search_bar_background"/>

    </com.google.android.material.appbar.AppBarLayout>

</layout>