<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.popular.broadcast.presentation.home.HomeFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.dxb.truckmonitor.presentation.dashboard.pages.list.ListViewModel" />

        <variable
            name="adapter"
            type="com.dxb.truckmonitor.presentation.dashboard.pages.list.TruckListAdapter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:animateLayoutChanges="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feed_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:adapter="@{adapter}"
            app:dataSet="@{viewModel.displayTruckList}"
            app:scrollToLast="@{false}"
            tools:listitem="@layout/item_truck_driver"/>

    </LinearLayout>

</layout>