...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.dashboard.DashboardActivity">

        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar_main"
            app:isAllowed="@{viewModel.isUserActionsEnabled()}"
            app:baseViewModel="@{viewModel}"
            app:pageTitle="@{@string/dashboard_title}"
            app:queryTextListener="@{viewModel.onQueryTextListener}" />

...
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:defaultNavHost="true"
                    app:navGraph="@navigation/navigation_app" />

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_vertical"
                    android:background="@color/theme_color"
                    app:elevation="10dp"
                    app:fragmentManager="@{fragmentManager}"
...
